--- a/webpage1.html
+++ b/webpage1.html
@@ -3,8 +3,14 @@
     <head>
           <title>My Web Page!</title>
     </head>
+    <style>
+        h1 {
+            color : red;
+            text-align: center;
+        }
+    </style>
     <body>
         Hello, World! and Hello again and herror
-
     </body>
 </html>
+    
