--- a/image.html
+++ b/image.html
@@ -4,6 +4,6 @@
     <title> My Web Page!</title>
   </head>
     <body>
-      <img = src "robot.png">
+      <img src="eagle.jpg" width ="700" height="700">
     </body>
   </html>
