--- a/size.html
+++ b/size.html
@@ -5,8 +5,10 @@
           <style>
             div {
                 background-color: teal;
-                width: 100px;
+                width: 400px;
                 height: 480px;
+                margin: 30px;
+                padding: 20px;
             }
             </style>
     </head>
