Added another line

--- a/table.html
+++ b/table.html
@@ -1,6 +1,21 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <style>
+        table {
+          border : 2px solid black;
+          border-collapse:collapse;
+          width: 50%;
+        }
+        th,td {
+          border: 1px solid black;
+          padding: 5px;
+          text-align: center;
+        }
+        th {
+          background-color:  grey;
+        }
+    </style>
       <title>Presidents</title>
   </head>
   <body>
